# CurveDecomposition

./: .travis.yml  CMakeLists.txt  INSTALL.txt  README.md  RLPR_DGMM4CV2016.md  decompositionAlgorithm.cpp  decompositionAlgorithm.h  functions.cpp  functions.h  main.cpp  myfunctions.cpp  myfunctions.h  testfunctions.cpp  testfunctions.h
Dataset/NoiseSectors/: CircleRectNoise.pgm  CircleRectNoise.sdp  StarNoise.pgm  StarNoise.sdp  cercleNoise.sdp  ellipseNoise.pgm  ellipseNoise.sdp  flowerNoise.pgm  flowerNoise.sdp  pentagonNoise.pgm  pentagonNoise.sdp
Dataset/Sketches/: readme.txt  s01_01.txt  s01_02.txt  s01_03.txt  s01_04.txt  s01_05.txt  s01_06.txt  s01_07.txt  s01_08.txt  s01_09.txt  s01_10.txt  s01_11.txt  s01_12.txt  s01_13.txt  s01_14.txt  s01_15.txt  s01_16.txt  s01_17.txt  s01_18.txt  s01_19.txt  s01_20.txt  s01_21.txt  s01_22.txt  s01_23.txt  s01_24.txt  s01_25.txt  s01_26.txt  s01_27.txt  s01_28.txt  s01_29.txt  s01_30.txt  s01_31.txt  s01_32.txt  s01_33.txt  s01_34.txt  s01_35.txt  s01_36.txt  s01_37.txt  s01_38.txt  s01_39.txt  (+777 more)
Dataset/TechnicalDocuments/: Fig1.sdp  Fig2.sdp  Fig3.sdp  symbol004.sdp  symbol016.sdp  symbol021.sdp  symbol066.sdp  symbol073.sdp  symbol101.sdp  symbol119.sdp
Dataset/TechnicalDocumentsNoise/: symbol004_KNoise_01.pgm  symbol004_KNoise_01.sdp  symbol004_KNoise_02.pgm  symbol004_KNoise_02.sdp  symbol004_KNoise_03.pgm  symbol004_KNoise_03.sdp  symbol004_KNoise_05.pgm  symbol004_KNoise_05.sdp  symbol004_KNoise_07.pgm  symbol004_KNoise_07.sdp  symbol066_KNoise_01.pgm  symbol066_KNoise_01.sdp  symbol066_KNoise_02.pgm  symbol066_KNoise_02.sdp  symbol066_KNoise_03.pgm  symbol066_KNoise_03.sdp  symbol066_KNoise_04.pgm  symbol066_KNoise_04.sdp  symbol066_KNoise_05.pgm  symbol066_KNoise_05.sdp  symbol066_KNoise_07.pgm  symbol066_KNoise_07.sdp  symbol119_KNoise_01.pgm  symbol119_KNoise_01.sdp  symbol119_KNoise_02.pgm  symbol119_KNoise_02.sdp  symbol119_KNoise_03.pgm  symbol119_KNoise_03.sdp  symbol119_KNoise_04.pgm  symbol119_KNoise_04.sdp  (+2 more)
ImaGene/: CMakeLists.txt  COPYRIGHT  ChangeLog  INSTALL
ImaGene-forIPOL/: .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  README  doxy.config.in
ImaGene-forIPOL/check/: check_CMLP.sh  check_DMLP.sh
ImaGene-forIPOL/check/expected/: chr1-dmlp-cw.pts  chr2-dmlp-ccw.pts  chr2-dmlp-cw.pts  chr3-dmlp-ccw.pts  chr3-dmlp-cw.pts  chr4-dmlp-cw.pts  circle-10-dmlp-ccw.pts  circle-dmlp-ccw.pts  ex1-dmlp-ccw.pts  ex1-dmlp-cw.pts  ex2-dmlp-ccw.pts  ex2-dmlp-cw.pts  ex5-dmlp-ccw.pts  ex6-dmlp-ccw.pts  ex6-dmlp-cw.pts  ex7-dmlp-ccw.pts  flower2-dmlp-ccw.pts  flower2-dmlp-cw.pts
ImaGene-forIPOL/check/input/: chr3.fc  chr4.fc  circle.fc  ex7.fc  flower2.fc
ImaGene-forIPOL/data/images/: lena-6x2x2-inv-lb.pgm  lena-6x2x2-inv-lb.xcf  lena-ns2.pgm  synthese1-10x2x2-inv-lb.pgm  synthese1-1x2x2-inv.pgm  synthese1-1x4x4-inv.pgm  synthese1-4x4x4-inv-lb.pgm  synthese1-4x4x4-inv.pgm  synthese1-6x2x2-inv-lb.pgm  synthese1-again.pgm  synthese1-flou-again-inv.pgm  synthese1-flou.pgm  synthese1-nsx2-2-area1.pgm  synthese1-nsx2-2.pgm  synthese1-nsx2.pgm  synthese1.pgm
ImaGene-forIPOL/demoIPOL/: CMakeLists.txt  applyMS.sh  convert.sh  convertFig.sh  meaningfulScaleEstim.cxx  minimalCodeNoiseDetection.cxx  transformBG.sh
ImaGene-forIPOL/demoIPOL/Contours/: cercle4Noise.fc  circle-100.fc  circle-8000.fc  contourJ2.fc  ex3.fc  flowerSmall2.fc  formeTest4.fc  formeTest7.fc  pentagon50.fc  polygoneBruit.fc  polygoneBruit2.fc
ImaGene-forIPOL/doc/: Doxyfile.in  digitalspaces.dox  doxygen.cmake  faq.dox  imagene.bib  main.dox  objectives.dox  quicktour.dox  userguide.dox
ImaGene-forIPOL/doc/images/: flower-1-3.pgm
ImaGene-forIPOL/examples/: CMakeLists.txt  example-1-1.cxx  example-1-2.cxx  example-1-3.cxx  example-1-3b.cxx  example-1-4.cxx  example-1-5.cxx  example-1-6.cxx
ImaGene-forIPOL/include/: CMakeLists.txt
ImaGene-forIPOL/include/ImaGene/base/: UndoableList.h
ImaGene-forIPOL/include/ImaGene/helper/: MultiscaleProfile.h
ImaGene-forIPOL/src/: CMakeLists.txt
ImaGene-forIPOL/src/helper/: ShapeHelper.cxx
ImaGene-forIPOL/tests/: CMakeLists.txt  CTestTestfile.cmake  chain1.fc  chain2.fc  chain3.fc  test_AffineFunction.cxx  test_Analog.cxx  test_Arithmetic.cxx  test_BlurredSegmentTgtCover.cxx  test_CubicalComplex.cxx  test_Curvature.cxx  test_DLine.cxx  test_DMLP.cxx  test_DMLP.sh  test_DMLP_flip.cxx  test_DSegment.cxx  test_ErrorMeasure.cxx  test_Extract3DCC.cxx  test_Freeman.cxx  test_GridCurve.cxx  test_HashTable.cxx  test_ImageScaleAnalysis.cxx  test_K2Space.cxx  test_MLP.cxx  test_MSOnContours.cxx  test_Measure.cxx  test_MultNormales.cxx  test_Multiscale.cxx  test_Multiscale_segment.cxx  test_OrderedAlphabet.cxx  test_Profiles.cxx  test_Reconstruction.cxx  test_Resolutions.cxx  test_Resolutions.sh  test_SBFraction.cxx  test_Tangent.cxx  test_TangentialCover.cxx  test_Vector.cxx  test_nD.cxx  test_rSet.cxx
ImaGene-forIPOL/tests/ContoursTest/: cercleB1.fc  cercleB2.fc  circle50.fc  contourS.fc  ellipse.fc  ellipseBruit2.fc  ellipseBruitNoLoop.fc  ex8.fc  flower-noise.fc  flowerLarge.sdp  flowerLargeSampled10.sdp  flowerNoise.fc  flowerNoise2.fc  flowerNoiseNoLoop.fc  flowerSmall.fc  formeTest2.fc  formeTest3.fc  formeTest5.fc  formeTest6.fc  formeTest8.fc  multiResolution.fc  pentagon100.fc  polygoneBruitNoLoop.fc  rsquare.fc  rsquareNoise.fc  rsquareNoiseR8.fc  snowFlake2.fc
ImaGene-forIPOL/tests/ImagesTest/: lena.pgm
ImaGene-forIPOL/tests/TestCompNoiseDetect/: CMakeLists.txt  displayEpsilonMC.cxx  displayMeaningfulContours.cxx  displayNoiseBS.cxx  testEpsilonMS.cxx
ImaGene-forIPOL/tests/TestPAMI/: CMakeLists.txt  affTangentes.cxx  ajusteImages.cxx  compareCntDistance.cxx  compareShape.cxx  composeImage.cxx  displayBoxes.cxx  displayFlatCurved.cxx  displayNoise.cxx
Samples/: CircleRect.sdp  CircleRectNew.sdp  ContourFlower.sdp  carre04R50.sdp  circle50.sdp  circle50Noise4.sdp  example7_KNoise_07.sdp  exemple13_KNoise_03.sdp  flower100Noise4.sdp  letterR.sdp  pentagonNoise4.sdp  symbol004_KNoise_05.sdp  symbol066_KNoise_05.sdp  symbol119_KNoise_07.sdp  techImage_1  techImage_1.sdp  techImage_2.sdp
(+45 files in other folders)
